Name:                snaplet-environments
Version:             0.1
Synopsis:            Provides ability to easly read configuration based on given app environment 
                     given at command line, envs are defined in app configuration file
License:             BSD3
License-file:        LICENSE
Author:              Kamil Ciemniewski
Maintainer:          ciemniewski.kamil@gmail.com
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.6


Library
  hs-source-dirs: src

  library
  exposed-modules:  
    Snap.Snaplet.Environments
    Snap.Snaplet.Environments.Instances
  
  Build-depends:
    base >= 4 && <= 5,
    snap >= 0.7 && < 0.9,
    snap-core >= 0.7 && < 0.9,
    mtl >= 2 && < 3,
    configurator >= 0.2,
    regex-tdfa >= 1.1.8,
    unordered-containers >= 0.1.4.3,
    text >= 0.11,
    bson >= 0.1.6
  
  extensions: 
      OverloadedStrings
    , FlexibleInstances
    , TypeSynonymInstances
    , MultiParamTypeClasses 
  